Before merging API and HTML

--- a/HTML/web/main_complete.html
+++ b/HTML/web/main_complete.html
@@ -343,9 +343,9 @@
 		<!--sidebar-->
 	    <div id="sidebar" class="bar" style="text-align:left;">
 		<h1>London Gentrification</h1>
-		<input name="button1" type="button" value="Description"; class="button description" onclick=button1();>
+		<input name="button1" type="button" value="The Project"; class="button description" onclick=button1();>
         <input name="button2" type="button" value="Methodology"; class="button methodology" onclick=button2();>
-		<input name="button3" type="button" value="Graphs"; class="button graphs" onclick=button3();>
+		<input name="button3" type="button" value="Team"; class="button graphs" onclick=button3();>
         <input name="button4" type="button" value="Data Sources"; class="button data" onclick=button4();>
 
 		</div>
@@ -435,7 +435,7 @@
 		   
 		   <table class="clearbutton">
 		   <tr>
-		   <td><button><a href="#" id="clear">Clear All</a></button></td>
+		   <td><button><a href="#" id="clear">Reset</a></button></td>
 		   </tr>
 		   </table>
            </div>
