--- a/SDC-Coursework.scriv/QuickLook/Preview.html
+++ b/SDC-Coursework.scriv/QuickLook/Preview.html
@@ -28,26 +28,26 @@
 
 <ul>
 <li>
-<p class="binderItem"><strong>The Project</strong></p>
+<p class="binderItem"><strong>Introduction</strong><br/>\section{Introduction}<br/>
+ Between 2006 and 2011, I spent five years working  in London. During this time, I personally assisted to the transformation of some neighbourhoods from being unappealing and relatively affordable to being full of new stores, bars, services and expensive. I was living in an ex- council house in N1, where us, young professionals, would share the neibourhood with what appeared to be low income families, whose life-style, interest and needs were very different from ours. I li...</p>
 </li>
 <li>
-<p class="binderItem"><strong>The Team</strong></p>
+<p class="binderItem"><strong>The project</strong><br/>\section{The project}<br/>
+\subsection{Description}<br/>
+“What’s for lunch in the neighbourhood” is an exploration of food habits of Londoners, depending on their income and where they live.<br/>
+The rationale is that different social classes have different consume patterns, hence the offer of services and retails, in this particular case food premises, will reflect this differences across the territory. We considered the names of more than $10000$ food premises across London, split them in single word tokens ...</p>
 </li>
 <li>
-<p class="binderItem"><strong>Methodology</strong><br/><h2>Data Cleaning</h2><br/>
+<p class="binderItem"><strong>Data Sources</strong><br/>\subsection{Data and Data cleaning}<br/>
+The dataset used for the analysis and visualisation is the “UK Food Hygiene Ratings” dataset, provided by the \cite{foodData}. From the description on the website, “the data provide the food hygiene rating or inspection result given to a business and reflect the standards of food hygiene found on the date of inspection or visit by the local authority. Businesses include restaurants, pubs, cafés, takeaways, hotels and other places consumers eat, as well as supe...</p>
+</li>
+<li>
+<p class="binderItem"><strong>Methodology</strong><br/>\subsection{Data Cleaning}<br/>
 <br/>
 <h2>Data Analysis</h2><br/>
 <br/>
 <h2>Python Code</h2><br/>
 </p>
-</li>
-<li>
-<p class="binderItem"><strong>Untitled</strong></p>
-</li>
-<li>
-<p class="binderItem"><strong>Data Sources</strong><br/>Link to API documentation<br/>
-Data description and link to food agency<br/>
-Link to the book</p>
 </li>
 </ul>
 
